fix spacing below bottom button for mobile layout.

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h3 {
 .button2 {
   background-color: #280004;
   color: #CCC9A1;
+  margin-bottom: 20px;
 }
 
 /*https://coolors.co/ccc9a1-f0ffce-a53f2b-4c230a-280004*/
